添加API用量监控规则到全局记忆

--- a/memory/2026-01-30.md
+++ b/memory/2026-01-30.md
@@ -51,6 +51,11 @@
 - 私钥位置：`~/.ssh/dimstar-clawdbot`
 - 记录到 MEMORY.md 作为最高优先级规则
 
+#### 7. API 用量监控规则（2026-01-30 下午）
+- 当 API key 用量低于 20% 时自动提醒
+- 每次对话开始时检查 `/status`
+- 记录到 MEMORY.md 作为最高优先级规则
+
 ### 重要更新
 
 **身份确认**：
